Add seo service and basic tags

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="description" content="The home of Team Scotland and Scottish quidditch">
+  <meta name="keywords" content="quidditch, quidditch scotland, team scotland, quidditchuk">
+
+  <!-- twitter -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@content">
+  <meta name="twitter:title" content="Quidditch Scotland">
+  <meta name="twitter:description" content="The home of Team Scotland and Scottish quidditch">
+  <meta name="twitter:image" content="https://www.quidditchscotland.co.uk/assets/images/seo.png">
+  
+  <!-- facebook and other social sites -->
+  <meta property="og:type" content="article">
+  <meta property="og:site_name" content="Quidditch Scotland">
+  <meta property="og:title" content="Quidditch Scotland">
+  <meta property="og:description" content="The home of Team Scotland and Scottish quidditch">
+  <meta property="og:image" content="https://www.quidditchscotland.co.uk/assets/images/seo.png">
+  <meta property="og:url" content="https://www.quidditchscotland.co.uk">
+
   <title>Quidditch Scotland</title>
   <base href="/">
 
